several Sonar fixes